Fixed navbar width and height on smaller screens

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1em;
-  padding: $navbarPadding;
+  padding: 0 $navbarPaddingLeftRight;
 
   a {
       text-decoration: none;
